kubernetes/workloads/templates/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
  namespace: $WORKLOAD_NAMESPACE
  labels:
    app: homepage
    app.kubernetes.io/name: homepage
    app.kubernetes.io/part-of: ztc-workloads
spec:
  selector:
    app: homepage
  ports:
  - name: http
    port: 80
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
